--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,16 @@
+contourpy==1.2.1
+cycler==0.12.1
 deap==1.4.1
+fonttools==4.51.0
+greenlet==3.0.3
+kiwisolver==1.4.5
+matplotlib==3.9.0
 numpy==1.26.4
+packaging==24.0
+pillow==10.3.0
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
+pyzmq==26.0.3
 scipy==1.13.0
+scoop==0.7.2.0
+six==1.16.0
